{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 30,
  "lineage": "6442c78e-3c4e-627c-aa10-b30c7df9742e",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "griffin-dev-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-30T02:47:38.919-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-c361fa218a2b/global/firewalls/griffin-dev-vpc-allow-ssh",
            "log_config": [],
            "name": "griffin-dev-vpc-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c361fa218a2b/global/networks/griffin-dev-vpc",
            "priority": 65534,
            "project": "qwiklabs-gcp-04-c361fa218a2b",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c361fa218a2b/global/firewalls/griffin-dev-vpc-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.griffin-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "griffin-prod-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-30T02:47:38.827-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-c361fa218a2b/global/firewalls/griffin-prod-vpc-allow-ssh",
            "log_config": [],
            "name": "griffin-prod-vpc-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c361fa218a2b/global/networks/griffin-prod-vpc",
            "priority": 65534,
            "project": "qwiklabs-gcp-04-c361fa218a2b",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c361fa218a2b/global/firewalls/griffin-prod-vpc-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.griffin-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.165.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-04-30T02:47:38.796-07:00",
            "id": "projects/qwiklabs-gcp-04-c361fa218a2b/global/addresses/private-ip-address",
            "name": "private-ip-address",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c361fa218a2b/global/networks/griffin-dev-vpc",
            "prefix_length": 16,
            "project": "qwiklabs-gcp-04-c361fa218a2b",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c361fa218a2b/global/addresses/private-ip-address"
          },
          "dependencies": [
            "google_compute_network.griffin-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230411",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c361fa218a2b/zones/us-east1-b/disks/bastion"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-04-c361fa218a2b/zones/us-east1-b/instances/bastion",
            "instance_id": "3689619842339669926",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "iBMNFt_YqpI=",
            "name": "bastion",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c361fa218a2b/global/networks/griffin-dev-vpc",
                "network_ip": "192.168.32.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c361fa218a2b/regions/us-east1/subnetworks/griffin-dev-mgmt",
                "subnetwork_project": "qwiklabs-gcp-04-c361fa218a2b"
              },
              {
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c361fa218a2b/global/networks/griffin-prod-vpc",
                "network_ip": "192.168.64.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c361fa218a2b/regions/us-east1/subnetworks/griffin-prod-mgmt",
                "subnetwork_project": "qwiklabs-gcp-04-c361fa218a2b"
              }
            ],
            "project": "qwiklabs-gcp-04-c361fa218a2b",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c361fa218a2b/zones/us-east1-b/instances/bastion",
            "service_account": [
              {
                "email": "285856707122-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "data.google_compute_default_service_account.default",
            "google_compute_network.griffin-dev-vpc",
            "google_compute_network.griffin-prod-vpc",
            "google_compute_subnetwork.griffin-dev-mgmt",
            "google_compute_subnetwork.griffin-prod-mgmt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "griffin-dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "VPC for Development",
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-04-c361fa218a2b/global/networks/griffin-dev-vpc",
            "mtu": 0,
            "name": "griffin-dev-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "qwiklabs-gcp-04-c361fa218a2b",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c361fa218a2b/global/networks/griffin-dev-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "griffin-prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "VPC for production",
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-04-c361fa218a2b/global/networks/griffin-prod-vpc",
            "mtu": 0,
            "name": "griffin-prod-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "qwiklabs-gcp-04-c361fa218a2b",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c361fa218a2b/global/networks/griffin-prod-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-30T02:47:40.712-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/qwiklabs-gcp-04-c361fa218a2b/regions/us-east1/routers/nat-router-us-central1",
            "name": "nat-router-us-central1",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c361fa218a2b/global/networks/griffin-dev-vpc",
            "project": "qwiklabs-gcp-04-c361fa218a2b",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c361fa218a2b/regions/us-east1/routers/nat-router-us-central1"
          },
          "dependencies": [
            "google_compute_network.griffin-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "qwiklabs-gcp-04-c361fa218a2b/us-east1/nat-router-us-central1/nat-router-us-central1",
            "log_config": [
              {
                "enable": true,
                "filter": "ALL"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-router-us-central1",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "qwiklabs-gcp-04-c361fa218a2b",
            "region": "us-east1",
            "router": "nat-router-us-central1",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.griffin-dev-vpc",
            "google_compute_router.router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "griffin-dev-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-30T02:47:39.696-07:00",
            "gateway_address": "192.168.32.1",
            "id": "projects/qwiklabs-gcp-04-c361fa218a2b/regions/us-east1/subnetworks/griffin-dev-mgmt",
            "ip_cidr_range": "192.168.32.0/20",
            "name": "griffin-dev-mgmt",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c361fa218a2b/global/networks/griffin-dev-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-04-c361fa218a2b",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c361fa218a2b/regions/us-east1/subnetworks/griffin-dev-mgmt",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.griffin-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "griffin-dev-wps",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-30T02:47:40.890-07:00",
            "gateway_address": "192.168.16.1",
            "id": "projects/qwiklabs-gcp-04-c361fa218a2b/regions/us-east1/subnetworks/griffin-dev-wp",
            "ip_cidr_range": "192.168.16.0/20",
            "name": "griffin-dev-wp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c361fa218a2b/global/networks/griffin-dev-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-04-c361fa218a2b",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c361fa218a2b/regions/us-east1/subnetworks/griffin-dev-wp",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.griffin-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "griffin-prod-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-30T02:47:40.835-07:00",
            "gateway_address": "192.168.64.1",
            "id": "projects/qwiklabs-gcp-04-c361fa218a2b/regions/us-east1/subnetworks/griffin-prod-mgmt",
            "ip_cidr_range": "192.168.64.0/20",
            "name": "griffin-prod-mgmt",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c361fa218a2b/global/networks/griffin-prod-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-04-c361fa218a2b",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c361fa218a2b/regions/us-east1/subnetworks/griffin-prod-mgmt",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.griffin-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "griffin-prod-wp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-30T02:47:41.938-07:00",
            "gateway_address": "192.168.48.1",
            "id": "projects/qwiklabs-gcp-04-c361fa218a2b/regions/us-east1/subnetworks/griffin-prod-wp",
            "ip_cidr_range": "192.168.48.0/20",
            "name": "griffin-prod-wp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c361fa218a2b/global/networks/griffin-prod-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-04-c361fa218a2b",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c361fa218a2b/regions/us-east1/subnetworks/griffin-prod-wp",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.griffin-prod-vpc"
          ]
        }
      ]
    }
  ]
}